syntax = "proto3";

message Metric {
  float cpu = 1;
  float memory = 2;
}

message Handshake {
  string ip_address = 1;
  string namespace = 2;
  string api_key = 3;
}

message FailureReport {
  string namespace = 1;
  string ip_address = 2;
}

message IPRequest {
  string client_ip_address = 1;
  string namespace = 2;
}

message AgentRegistrationResponse {
  string client_id = 1;
}

message AgentRegistrationRequest {
  string api_key = 1;
}

service Horbo {
  rpc RegisterAgent(AgentRegistrationRequest) returns (AgentRegistrationResponse);
}